@startuml ER Diagram - User Journey 1
!theme plain
skinparam linetype ortho
skinparam roundcorner 8
skinparam EntityBorderColor #3B5998
skinparam EntityBackgroundColor #EEF2FF
skinparam EntityFontStyle bold

title User Journey 1 — Pemesanan & Approval Kuota Bahan Bakar\nER Diagram (Kelompok 9)

' ─── COMPANY ─────────────────────────────────────────────────────
entity "companies" as companies {
  * id : BIGINT <<PK, AUTO_INCREMENT>>
  --
  name : VARCHAR(255) NOT NULL
  email : VARCHAR(255) NOT NULL
  address : TEXT NULL
}

' ─── USERS ───────────────────────────────────────────────────────
entity "users" as users {
  * id : BIGINT <<PK, AUTO_INCREMENT>>
  --
  company_id : BIGINT <<FK, NULL>>
  name : VARCHAR(255) NOT NULL
  email : VARCHAR(255) UNIQUE NOT NULL
  password : VARCHAR(255) NOT NULL
  role : ENUM(staf_pembeli, manajer_pembeli,\n    admin_penjualan, admin_depo, petugas_spbu)\n    DEFAULT staf_pembeli
}

' ─── ORDERS ──────────────────────────────────────────────────────
entity "orders" as orders {
  * id : BIGINT <<PK, AUTO_INCREMENT>>
  --
  order_number : VARCHAR(50) UNIQUE NOT NULL
  company_id : BIGINT <<FK>>
  created_by : BIGINT <<FK>> ' → users.id
  approved_by : BIGINT <<FK, NULL>> ' → users.id
  fuel_type : VARCHAR(50) DEFAULT 'Solar'
  volume_liters : DECIMAL(10,2) NOT NULL
  unit_price : DECIMAL(12,2) NOT NULL
  delivery_location : VARCHAR(255) NOT NULL
  scheduled_at : DATETIME NOT NULL
  status : ENUM(draft, pending_approval, approved,\n    rejected, sent_to_depot, waiting_payment,\n    paid, cancelled, expired) DEFAULT draft
  rejection_reason : TEXT NULL
  approved_at : TIMESTAMP NULL
}

' ─── RELATIONSHIPS ───────────────────────────────────────────────
companies ||--o{ users   : "has many"
companies ||--o{ orders  : "places"

users ||--o{ orders      : "created_by"
users |o--o{ orders      : "approved_by (nullable)"

@enduml
